5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1789_1614.log
== TEST (2019-05-29 18:07:43) 
-- CODE:
n = .upper()array(eval(input("Nome dos alimentos: ")))

print(n)
-- ERROR:
File "XXXX", line 1
    n = .upper()array(eval(input()))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:08:03) 
-- CODE:
n = array(eval(input("Nome dos alimentos: "))).upper

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = array(eval(input())).upper
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:08:39) 
-- CODE:
n = array(eval(input("Nome dos alimentos: ")).upper())

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = array(eval(input()).upper())
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:08:47) 
-- CODE:
n = array(eval(input("Nome dos alimentos: ")))

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:10:52) 
-- CODE:
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(v)):
	if (.upper()v[t] == "BANANA")
		print("B")
-- ERROR:
File "XXXX", line 7
    if (.upper()v[t] == "BANANA")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:11:01) 
-- CODE:
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(v)):
	if (v[t].upper() == "BANANA")
		print("B")
-- ERROR:
File "XXXX", line 7
    if (v[t].upper() == "BANANA")
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:11:16) 
-- CODE:
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(v)):
	if .upper()(v[t] == "BANANA")
		print("B")
-- ERROR:
File "XXXX", line 7
    if .upper()(v[t] == "BANANA")
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:11:53) 
-- CODE:
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(v)):
	if (v[t] == "BANANA")
		print("B")
-- ERROR:
File "XXXX", line 7
    if (v[t] == "BANANA")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:12:03) 
-- CODE:
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(v)):
	if (.upper()v[t] == "BANANA"):
		print("B")
-- ERROR:
File "XXXX", line 7
    if (.upper()v[t] == "BANANA"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:12:10) 
-- CODE:
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(v)):
	if (v[t] == "BANANA"):
		print("B")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:12:39) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(v)):
	if (.upper()v[t] == "BANANA"):
		print("B")
-- ERROR:
File "XXXX", line 8
    if (.upper()v[t] == "BANANA"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:12:43) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(v)):
	if (v[t] == "BANANA"):
		print("B")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:13:16) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(n)):
	if (v[t] == "BANANA"):
		print("B")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:17:20) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(n)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA")
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)
		
print(round(sum(q)))
-- ERROR:
File "XXXX", line 12
    elif (n[t] == "FEIJOADA")
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:17:33) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(n)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)
		
print(round(sum(q)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:17:55) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(n)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)
		
print(round(sum(q)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:19:17) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(n)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(295/100)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(127/100)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)
		
print(round(sum(q)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:19:56) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(n)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(295/100)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(127/100)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)
		
	print(q[t])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:20:59) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(n)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(295/100)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(127/100)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)
		
	t = t + 1
	
	print(q[t])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:21:35) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(n)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(295/100)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(127/100)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)
		
	t = t + 1
	
	print(q[t])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:21:53) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(n)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(295/100)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(127/100)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)
		
	t = t + 1
	
	print(q[t])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:22:51) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(295/100)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(127/100)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)
		
	t = t + 1
	
	print(q[t])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:23:16) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(295/100)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(127/100)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)
		
	t = t + 1
	
	print(q[t])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:23:29) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(295/100)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(127/100)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)
		
	t = t + 1
	
print(q[t])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:23:38) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(295/100)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(127/100)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)
		
	t = t + 1
	
print(q[t])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:24:06) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(295/100)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(127/100)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)
	print(q[t])
	t = t + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:24:56) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)
	print(q[t])
	t = t + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:25:10) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)
	print(q[t])
	t = t + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:25:31) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)
	print(q[t])
	t = t + 1
	
print(round(sum(q),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:26:02) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(round(sum(q),2))
-- EXECUTION TIME:
0.284773
-- TEST CASE 1:
---- input:
["BANANA","FEIJOADA","TOMATE"]
[300,50,60]
---- correct output:
366.5
---- user output:
366
-- TEST CASE 2:
---- input:
["BANANA","FEIJOADA","OMELETE"]
[150,100,60]
---- correct output:
334.9
---- user output:
334
-- TEST CASE 3:
---- input:
["OMELETE","FEIJOADA","BIFE"]
[100,130,140]
---- correct output:
682.1
---- user output:
682
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:26:15) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(round(sum(q),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:28:01) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(round(sum(q),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:28:03) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(round(sum(q),2))
-- EXECUTION TIME:
0.367674
-- TEST CASE 1:
---- input:
["BANANA","FEIJOADA","TOMATE"]
[300,50,60]
---- correct output:
366.5
---- user output:
366
-- TEST CASE 2:
---- input:
["BANANA","FEIJOADA","OMELETE"]
[150,100,60]
---- correct output:
334.9
---- user output:
334
-- TEST CASE 3:
---- input:
["OMELETE","FEIJOADA","BIFE"]
[100,130,140]
---- correct output:
682.1
---- user output:
682
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:28:04) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(round(sum(q),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:28:27) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(round(sum(q),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:29:46) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")) dtype=float)

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(round(sum(q),2))
-- ERROR:
File "XXXX", line 3
    q = array(eval(input()) dtype=float)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:30:09) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(round(sum(q),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:30:44) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(sum(q)
-- ERROR:
File "XXXX", line 22
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:30:48) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(sum(q))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:31:09) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(sum(q))
-- EXECUTION TIME:
0.599713
-- TEST CASE 1:
---- input:
["BANANA","FEIJOADA","TOMATE"]
[300,50,60]
---- correct output:
366.5
---- user output:
366
-- TEST CASE 2:
---- input:
["BANANA","FEIJOADA","OMELETE"]
[150,100,60]
---- correct output:
334.9
---- user output:
334
-- TEST CASE 3:
---- input:
["OMELETE","FEIJOADA","BIFE"]
[100,130,140]
---- correct output:
682.1
---- user output:
682
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:31:23) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(sum(q))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:32:34) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(sum(q))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:32:50) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(sum(q))
-- EXECUTION TIME:
0.515512
-- TEST CASE 1:
---- input:
["BANANA","FEIJOADA","TOMATE"]
[300,50,60]
---- correct output:
366.5
---- user output:
366
-- TEST CASE 2:
---- input:
["BANANA","FEIJOADA","OMELETE"]
[150,100,60]
---- correct output:
334.9
---- user output:
334
-- TEST CASE 3:
---- input:
["OMELETE","FEIJOADA","BIFE"]
[100,130,140]
---- correct output:
682.1
---- user output:
682
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:32:51) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(sum(q))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:33:28) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")) dtype=float)

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(sum(q))
-- ERROR:
File "XXXX", line 3
    q = array(eval(input()) dtype=float)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:33:56) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")) dtype=float_)

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(sum(q))
-- ERROR:
File "XXXX", line 3
    q = array(eval(input()) dtype=float_)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:34:54) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(sum(q))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:35:49) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: "))dtype=float)

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(sum(q))
-- ERROR:
File "XXXX", line 3
    q = array(eval(input())dtype=float)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:35:54) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")) dtype=float)

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(sum(q))
-- ERROR:
File "XXXX", line 3
    q = array(eval(input()) dtype=float)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:35:54) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")) dtype=float)

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(sum(q))
-- ERROR:
File "XXXX", line 3
    q = array(eval(input()) dtype=float)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:09) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))dtype = float

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(sum(q))
-- ERROR:
File "XXXX", line 3
    q = array(eval(input()))dtype = float
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:33) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(float(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(sum(q))
-- ERROR:
File "XXXX", line 5
    t = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:44) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(float(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(sum(q))
-- ERROR:
File "XXXX", line 5
    t = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:48) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
print(sum(q))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:38:59) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (q[i] <= size(q))
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- ERROR:
File "XXXX", line 24
    while (q[i] <= size(q))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:39:12) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (q[i] <= size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:39:24) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (q[i] <= size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:39:29) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (q[i] < size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:39:33) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (q[i] < size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- EXECUTION TIME:
0.510092
-- TEST CASE 1:
---- input:
["BANANA","FEIJOADA","TOMATE"]
[300,50,60]
---- correct output:
366.5
---- user output:
0
-- TEST CASE 2:
---- input:
["BANANA","FEIJOADA","OMELETE"]
[150,100,60]
---- correct output:
334.9
---- user output:
0
-- TEST CASE 3:
---- input:
["OMELETE","FEIJOADA","BIFE"]
[100,130,140]
---- correct output:
682.1
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:39:35) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (q[i] < size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:40:43) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (q[i] < size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:41:10) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (i < size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:41:24) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (i < size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- EXECUTION TIME:
0.512185
-- TEST CASE 1:
---- input:
["BANANA","FEIJOADA","TOMATE"]
[300,50,60]
---- correct output:
366.5
---- user output:
366
-- TEST CASE 2:
---- input:
["BANANA","FEIJOADA","OMELETE"]
[150,100,60]
---- correct output:
334.9
---- user output:
334
-- TEST CASE 3:
---- input:
["OMELETE","FEIJOADA","BIFE"]
[100,130,140]
---- correct output:
682.1
---- user output:
682
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:41:27) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")))

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (i < size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:42:16) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")) dtype=int)

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (i < size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- ERROR:
File "XXXX", line 3
    q = array(eval(input()) dtype=int)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:42:29) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")dtype=int))

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (i < size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- ERROR:
File "XXXX", line 3
    q = array(eval(input()dtype=int))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:42:52) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: "))dtype=int)

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (i < size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- ERROR:
File "XXXX", line 3
    q = array(eval(input())dtype=int)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:42:53) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: "))dtype=int)

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (i < size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- ERROR:
File "XXXX", line 3
    q = array(eval(input())dtype=int)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:43:47) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")) dtype = int )

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (i < size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- ERROR:
File "XXXX", line 3
    q = array(eval(input()) dtype = int )
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:43:49) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")) dtype = int)

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (i < size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- ERROR:
File "XXXX", line 3
    q = array(eval(input()) dtype = int)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:43:50) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")) dtype = int)

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (i < size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- ERROR:
File "XXXX", line 3
    q = array(eval(input()) dtype = int)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:44:15) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: "), dtype=float))

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (i < size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:44:20) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: "), dtype=float))

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (i < size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- EXECUTION TIME:
0.461103
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/1614/main.py", line 3, in <module>
    q = array(eval(input(), dtype=float))
TypeError: eval() takes no keyword arguments

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:44:23) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: "), dtype=float))

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (i < size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:45:14) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")), dtype=float)

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (i < size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:45:39) 
-- CODE:
from numpy import *
n = array(eval(input("Nome dos alimentos: ")))
q = array(eval(input("Quantidade: ")), dtype=float)

t = 0

qt = 0
i = 0

while (t < size(q)):
	if (n[t] == "BANANA"):
		q[t] = q[t]*(0.97)
	elif (n[t] == "BIFE"):
		q[t] = q[t]*(2.95)
	elif (n[t] == "FEIJOADA"):
		q[t] = q[t]*(1.27)
	elif (n[t] == "OMELETE"):
		q[t] = q[t]*(1.04)
	elif (n[t] == "TOMATE"):
		q[t] = q[t]*(0.2)

	t = t + 1
	
while (i < size(q)):
	qt = qt + q[i]
	i = i + 1
	
print(qt)



-- EXECUTION TIME:
0.602139
-- TEST CASE 1:
---- input:
["BANANA","FEIJOADA","TOMATE"]
[300,50,60]
---- correct output:
366.5
---- user output:
366.5
-- TEST CASE 2:
---- input:
["BANANA","FEIJOADA","OMELETE"]
[150,100,60]
---- correct output:
334.9
---- user output:
334.9
-- TEST CASE 3:
---- input:
["OMELETE","FEIJOADA","BIFE"]
[100,130,140]
---- correct output:
682.1
---- user output:
682.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
